--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@fontsource/inter": "^5.0.18",
     "@mui/icons-material": "next",
     "@mui/joy": "^5.0.0-beta.36",
-    "@mui/material": "next",
+    "@mui/material": "^6.0.0-alpha.4",
     "@mui/material-nextjs": "next",
+    "mui-color-input": "^2.0.3",
     "next": "latest",
     "next-auth": "^4.24.7",
     "react": "latest",
